# scanner-registry-action

./: .flake8  README.md  action.yaml  pyproject.toml  requirements_dev.txt
.circleci/: config.yml
.github/workflows/: boost.yml  config.yaml
.makefiles/: Makefile  Makefile.code
action/scanner/: validate_rules_db.py
boostsec/registry_validator/: common.py  config.py  errors.py  models.py  parameters.py  schema.py  shared.py  upload_rules_db.py  validate_namespaces.py  validate_rules_db.py
boostsec/registry_validator/testing/: factories.py
boostsec/scanner/: validate_namespaces.py  validate_rules_db.py
tests/: conftest.py
tests/integration/: conftest.py  test_upload_rules_db.py  test_validate_namespace.py  test_validate_rules_db.py
tests/integration/samples/rules-realm/boostsecurityio/mitre-cwe/: rules.yaml
tests/integration/samples/rules-realm/invalids/missing-category/: rules.yaml
tests/integration/samples/rules-realm/invalids/multi-defaults/: rules.yaml
tests/integration/samples/scanners/boostsecurityio/simple-scanner/: module.yaml  rules.yaml
tests/integration/samples/scanners/invalids/duplicate-a/: module.yaml
tests/integration/samples/scanners/invalids/empty-rules/: module.yaml
tests/integration/samples/scanners/invalids/missing-namespace/: module.yaml
tests/integration/samples/scanners/others/missing-rules/: module.yaml
tests/integration/samples/scanners/others/only-import/: module.yaml  rules.yaml
tests/integration/samples/scanners/others/overload/: module.yaml  rules.yaml
tests/integration/samples/scanners/others/path-and-namespace-mismatch/: module.yaml
tests/integration/samples/scanners/others/with-placeholder/: module.yaml  rules.yaml
tests/integration/samples/server-side-scanners/boostsecurityio/simple-scanner/: module.yaml  rules.yaml
tests/integration/samples/server-side-scanners/boostsecurityio/simple-server-scanner/: module.yaml  rules.yaml
tests/integration/samples/server-side-scanners/invalids/duplicate-a/: module.yaml
tests/integration/samples/server-side-scanners/invalids/duplicate-b/: module.yaml
tests/integration/samples/server-side-scanners/invalids/empty-rules/: module.yaml
tests/integration/samples/server-side-scanners/invalids/missing-namespace/: module.yaml
tests/integration/samples/server-side-scanners/others/missing-rules/: module.yaml
tests/integration/samples/server-side-scanners/others/only-import/: module.yaml  rules.yaml
tests/integration/samples/server-side-scanners/others/only-server-import/: module.yaml  rules.yaml
tests/integration/samples/server-side-scanners/others/path-and-namespace-mismatch/: module.yaml
tests/unit/: test_config.py  test_errors.py  test_schema.py  test_shared.py
tests/unit/scanner/: conftest.py  test_upload_rules_db.py  test_validate_namespaces.py  test_validate_rules_db.py
