[tool.poetry]
name = "scanner-registry-action"
version = "1.0.0"
description = "A GitHub Action to scan the Registry repository"
authors = []
packages = [{ include = "boostsec" }]
include = ["boostsec/registry_validator/py.typed"]

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^6.0"
requests = "^2.28.1"
gql = {extras = ["requests"], version = "^3.4.0"}
typer = "^0.9.0"
pydantic = "^1.10.9"

[tool.poetry.extras]
testing = [
]

[tool.poetry.group.dev.dependencies]
bandit = "1.7.2"  # https://github.com/tylerwince/flake8-bandit/issues/21
black = "^22.3.0"
coverage = "^6.2"
flake8 = "^4.0.1"
flake8-bandit = "^2.1.2"
flake8-black = "^0.2.3,!=0.2.5"
flake8-blind-except = "^0.2.0"
flake8-broken-line = "^0.4.0"
flake8-bugbear = "^21.11.29"
flake8-builtins = "^1.5.3"
flake8-comprehensions = "^3.7.0"
flake8-docstrings = "^1.6.0"
flake8-eradicate = "^1.2.0"
flake8-isort = "^4.1.1"
flake8-logging-format = "^0.6.0"
flake8-pytest-style = "^1.5.1"
isort = "^5.10.1"
mypy = "^0.921"
pep8-naming = "^0.12.1"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
requests-mock = "^1.10.0"
types-jsonschema = "^3.2.0"
types-PyYAML = "^6.0.11"
types-requests = "^2.28.10"
pydantic-factories = "^1.17.3"

[tool.black]
target-version = ['py39']

[tool.coverage.report]
omit = ["alembic/*"]

[tool.mypy]
namespace_packages=true
explicit_package_bases=true
strict=true
show_error_codes=true

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
# Disable anyio to avoid conflict and force asyncio to load before entrypoints
# https://docs.pytest.org/en/6.2.x/writing_plugins.html#plugin-discovery-order-at-tool-startup
addopts = ["-p", "no:anyio", "-p", "asyncio"]
testpaths = ["tests"]
asyncio_mode = "auto"
